# freeflies

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
scripts/: entrypoint.sh  install.sh
src/: config.py  utils.py
src/bot/: __init__.py  config.py  meet_bot.py  utils.py
src/recording/: __init__.py  audio_recorder.py
src/transcription/: __init__.py  models.py  summarize.py  transcriber.py
src/transcription/prompts/: __init__.py  summarize_system.py
tests/: config.py  nodriver.py  seleniumbase.py
